<resources>
    <string name="app_name">My weather</string>
    <string name="kaluga">Kaluga</string>
    <string name="temperature" formatted="false">%d°</string>
    <string name="humidity" formatted="false">humidity %d %%</string>
    <string name="pressure" formatted="false">pressure %d mm </string>
    <string name="wind" formatted="false">wind %d m/s</string>
    <string name="data">Thursday, October 22</string>
    <string name="clear">Сlear</string>
    <string name="city">Сity</string>
    <string name="сelsius" formatted="false">%d°С</string>

    <string name="_6_c">6°C</string>
    <string name="_23">23</string>
    <string name="_12_c">12°C</string>
    <string name="search_for_a_city">Search for a city</string>
    <string name="choose_your_city">Choose your city</string>
    <string name="moscow">Moscow</string>
    <string name="saint_petersburg">Saint Petersburg</string>
    <string name="petropavlovsk">Petropavlovsk</string>
    <string name="novgorod">Novgorod</string>
    <string name="yaroslavl">Yaroslavl</string>
    <string name="to_show_the_strength_of_the_wind">To show the strength of the wind</string>
    <string name="to_show_the_atmospheric_pressure">To show the atmospheric pressure</string>
    <string name="find">find</string>
    <string name="go_Url">what day is it today?</string>
    <string name="url" translatable="false">https://www.calend.ru/events/</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="temp19">19 oct.</string>
    <string name="temp20">20 oct.</string>
    <string name="temp21">21 oct.</string>
    <string name="temp22">22 oct.</string>
    <string name="temp23">23 oct.</string>
    <string name="temp24">24 oct.</string>
    <string name="temp25">25 oct.</string>

    <string name="devs">About the developers</string>
    <string name="settings">Settings app</string>
    <string name="home">Home</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior" translatable="false">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="text_switch">Светлая тема</string>

</resources>