<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectionActivity">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_compat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/text_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_find" />

    <TextView
        android:id="@+id/selection_title"
        android:layout_width="@dimen/width_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:text="@string/choose_your_city"
        android:textAlignment="center"
        android:textSize="@dimen/text_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="@dimen/width_325"
        android:layout_height="@dimen/margin_80"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_30"
        android:layout_marginEnd="@dimen/margin_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selection_title">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/s1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moscow" />

            <TextView
                android:id="@+id/s2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saint_petersburg" />

            <TextView
                android:id="@+id/s3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/petropavlovsk" />

            <TextView
                android:id="@+id/s4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/novgorod" />

            <TextView
                android:id="@+id/s5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yaroslavl" />

            <TextView
                android:id="@+id/s6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kaluga" />
        </LinearLayout>
    </ScrollView>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_20"
        android:checked="false"
        android:text="@string/to_show_the_strength_of_the_wind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_50"
        android:checked="false"
        android:clickable="true"
        android:text="@string/to_show_the_atmospheric_pressure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_find"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_100"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_100"
        android:onClick="onClickButtonFind"
        android:text="@string/find"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />
</androidx.constraintlayout.widget.ConstraintLayout>